[package]
description = "🌳 toke provides a read-only graph interface for traversing Rust token trees"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "toke"
version = "0.20220725.0-dev"

[dependencies]
miette = "5.1.1"
once_cell = { version = "1.13.0", features = ["parking_lot"] }
proc-macro2 = { version = "1.0.40", features = ["span-locations"] }
thiserror = "1.0.31"

[dev-dependencies]
toke = { path = ".", default-features = false, features = ["dev-dependencies"] }

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=all"]
rustdoc-args = ["--html-in-header", "./src/pre-docs.html", "-Zunstable-options", "--generate-link-to-definition", "--show-type-layout"]

[features]
dev-dependencies = [
    "miette/fancy",
]
__all__ = []
